<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find Me</string>
    <string name="set_contacts">Set Contacts</string>
    <string name="set_message">Set Message</string>
    <string name="action_settings">Settings</string>
    <string name="find_me">Find me!</string>
    <string name="title_activity_contact_page">Contacts</string>
    <string name="title_activity_message_page">Message</string>
    
    <string name="edit_message">Set your emergency message here.</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="clear_contact_confirm_txt">Are you sure you want to clear all contacts?</string>
    
    <string name="curr_message_label">Current message:\n</string>
    <string name="reset_message">Reset Message</string>
    <string name="title_activity_send_message">Send Message</string>
    <string name="message">default \"save me\" message</string>
    <string name="defaultmessage">default \"save me\" message</string>
    <string name="number">4087173336</string>
    <string name="linkformat">http://maps.google.com/</string>
    <string name="contactlist">listttt</string>
    <string name="contactlistheader">Contacts</string>
    <string name="deletebutton">Delete All</string>
</resources>
