<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/layout"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alex.apps.findme.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/find_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_me"
        android:textSize="40sp" 
        android:onClick="sendMessage"/>
   	<Button
        android:id="@+id/setmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_message"
        android:onClick="toMessagePage" />
    <Button
        android:id="@+id/setcontacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_contacts"
        android:onClick="toContactPage" />
     <TextView 
 	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curr_message_label"/>
    <TextView 	
       	android:id="@+id/mainPageText"
 	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"/>
    <TextView 	
       	android:id="@+id/currentposition"
 	    android:layout_width="wrap_content"
        android:layout_height="wrap_content" />    
    <TextView 
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
</LinearLayout>
