<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="alex.apps.findme.MessagePage$PlaceholderFragment" >
	
	<EditText android:id="@+id/edit_message"

	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:inputType="text"  />
	<!-- <TextView

	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/curr_message_label"/>
	 <TextView
	    android:id="@+id/curr_message" 

	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/message"/>  -->

	    <Button 

	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ok_button"
	    android:onClick="saveMessage"/>
		<Button 

	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/reset_message"
	    android:onClick="resetMessage"/>
	    
	    

	

</LinearLayout>
